<resources>
    <string name="app_name">InstagramClone</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="description">Description...</string>
    <string name="take_picture">Take Picture</string>
    <string name="image">Image</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_post">Image Post</string>
    <string name="logo">Logo</string>
</resources>